<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity"
    android:background="@drawable/gotbkg"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:hint="@string/usuario_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="112dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:textColorHint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:ems="10"
        android:hint="@string/pass_repetir_hint"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btn_registrarse_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        tools:layout_conversion_absoluteHeight="366dp"
        tools:layout_conversion_absoluteWidth="136dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="366dp" />


</LinearLayout>