<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage">

    <Button
        android:id="@+id/btn_personajes"
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:layout_weight="1"
        android:text="@string/personajes" />

    <Button
        android:id="@+id/btn_casas"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/casas" />

    <Button
        android:id="@+id/btn_libros"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:text="@string/libros" />
</LinearLayout>