<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gotbkg"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        tools:layout_conversion_absoluteHeight="366dp"
        tools:layout_conversion_absoluteWidth="99dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        tools:layout_conversion_absoluteHeight="366dp"
        tools:layout_conversion_absoluteWidth="136dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="366dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <Button
        android:id="@+id/btn_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_conversion_absoluteHeight="366dp"
        tools:layout_conversion_absoluteWidth="136dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="366dp" />
</LinearLayout>